# ieditor

./: .gitignore  .gitmodules  CMakeLists.txt  CatmullRom.cpp  README.md  main.cc
plugin/: main.cc
plugins/invasion/ufo/fly/: anm.aseprite
plugins/invasion/ufo/hide/: anm.aseprite
plugins/invasion/ufo/scan_green/: anm.aseprite
src/core/include/: event.h  widget.h
src/core/src/: event.cc  widget.cc
src/graphlib/include/: graphlib.h  sfmllib.h
src/graphlib/src/: sfmllib.cc
src/gui/app/include/: app.h  app_widget.h  effect_manager.h  layout_manager.h  menu_manager.h  picture_manager.h  pictures.h  selector.h  tool_manager.h
src/gui/app/src/: app.cc  app_widget.cc  effect_manager.cc  layout_manager.cc  menu_manager.cc  picture_manager.cc  pictures.cc  selector.cc  tool_manager.cc
src/gui/basics/include/: button.h  curve.h  interfaces.h  slider.h  textbar.h
src/gui/basics/src/: button.cc  curve.cc  interfaces.cc  slider.cc  textbar.cc
src/gui/effects/include/: effect.h
src/gui/effects/src/: effect.cc
src/gui/filters/include/: filter.h
src/gui/filters/src/: filter.cc
src/gui/include/: app.h  button.h  interfaces.h  pickers.h  pictures.h  presets.h  text.h  textbar.h  texture.h
src/gui/presets/include/: input.h  interfaces.h  layout.h  pickers.h  presets.h  spline.h  tabctrl.h
src/gui/presets/src/: interfaces.cc  layout.cc  pickers.cc  presets.cc  spline.cc
src/gui/src/: app.cc  button.cc  interfaces.cc  pickers.cc  pictures.cc  presets.cc  slider.cc  text.cc  textbar.cc  texture.cc
src/gui/tools/include/: brush.h  tool.h
src/gui/tools/src/: brush.cc  tool.cc
src/plugin/: Makefile  app_interface.cc  app_interface.h  loader.cc  loader.h  main  math.cpp  plugin.cc  plugin.h  plugin_utils.cc  plugin_utils.h
src/plugin/include/: app_interface.h  loader.h  plugin.h  plugin_texture.h  plugin_utils.h  plugin_widget.h
src/plugin/mystery_plugin/: dick.c  myst_plugin.h  mystery_plugin.cc
src/plugin/src/: app_interface.cc  loader.cc  plguin_texture.cc  plugin.cc  plugin_texture.cc  plugin_utils.cc  plugin_widget.cc
src/util/include/: color.h  timer.h  utils.h  vector2.h  vector4.h
src/util/src/: color.cc  timer.cc  utils.cc
